PQJiraInt1/src/objects/JIRACXIssue__c.object
<CustomObject>
    <description>SF Copy of JIRA Issue related to Salesforce Client Cloud Cases</description>
    <fields>
        <fullName>Account_Info__c</fullName>
        <label>Account Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Behavior__c</fullName>
        <label>Actual Behavior</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Result__c</fullName>
        <label>Actual Result</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affected_Customers__c</fullName>
        <label>Affected Customers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affected_UI__c</fullName>
        <label>Affected UI</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Academic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional/Academic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Affects_Version__c</fullName>
        <label>Affects Version</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Assignee__c</fullName>
        <description>Who is the JIRA issue assigned to</description>
        <inlineHelpText>Why the JIRA issue is assigned to</inlineHelpText>
        <label>Assignee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Browsers__c</fullName>
        <label>Browsers</label>
        <picklist>
            <picklistValues>
                <fullName>IE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chrome</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Business_Priority__c</fullName>
        <label>Business Priority</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0 - Blocker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Numbers__c</fullName>
        <label>Case Numbers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cases__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>JIRACXIssues</relationshipLabel>
        <relationshipName>JIRACXIssues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Reported_Issue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Reported Issue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Reproduced_in_Production__c</fullName>
        <label>Date Reproduced in Production</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Epic_Link__c</fullName>
        <label>Epic Link</label>
        <picklist>
            <picklistValues>
                <fullName>Add</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Epics</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expected_Behavior__c</fullName>
        <label>Expected Behavior</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Expected_Result__c</fullName>
        <label>Expected Result</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Feature_Areas__c</fullName>
        <label>Feature Areas</label>
        <picklist>
            <picklistValues>
                <fullName>none</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit and Collections</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Front-line  and Technical Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Royalties Processing and Reporting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Goals and Commissions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transactional Billing and Invoicing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Usage Reports</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Feature__c</fullName>
        <label>Feature</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admin (PAM)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alerts and RSS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Found_via_Regression_Test__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Found via Regression Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JIRACreated__c</fullName>
        <description>Datetime the JIRA was created</description>
        <inlineHelpText>When the JIRA issue was created</inlineHelpText>
        <label>Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>JIRAID__c</fullName>
        <description>The numeric JIRA issue id for the JIRA Issue.</description>
        <inlineHelpText>The numeric JIRA issue ID for the JIRA Issue</inlineHelpText>
        <label>JIRAID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JIRAKey__c</fullName>
        <description>The unique JIRA Key for the issue</description>
        <externalId>true</externalId>
        <inlineHelpText>The JIRA Project Key id for the JIRA issue</inlineHelpText>
        <label>JIRAKey</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>JIRAProject__c</fullName>
        <description>Project that the JIRA issue belongs to</description>
        <inlineHelpText>JIRA defined project name that the issue belongs to</inlineHelpText>
        <label>JIRAProject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JIRAStatus__c</fullName>
        <description>The status of the JIRA issue</description>
        <inlineHelpText>The status of the JIRA issue</inlineHelpText>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JIRAUpdated__c</fullName>
        <description>When the JIRA issue was last updated</description>
        <inlineHelpText>When the JIRA issue was last updated</inlineHelpText>
        <label>Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Labels__c</fullName>
        <label>Labels</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LastWatcherUpdate__c</fullName>
        <description>Last time an update was sent to the watcher list.</description>
        <inlineHelpText>Last time an update was sent to the watcher list.</inlineHelpText>
        <label>LastWatcherUpdate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Originator__c</fullName>
        <label>Originator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Customer__c</fullName>
        <label>Other Customer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PQD_Customer__c</fullName>
        <label>PQD Customer</label>
        <picklist>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abbott</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>PQD_Target_Release__c</fullName>
        <label>PQD Target Release</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Team__c</fullName>
        <label>Primary Team</label>
        <picklist>
            <picklistValues>
                <fullName>CMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMS A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMS B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMS C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMS D</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>Priority of the JIRA Issue</description>
        <inlineHelpText>Priority of the issue in JIRA</inlineHelpText>
        <label>Priority</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_CMS_Databases__c</fullName>
        <label>Related CMS Databases</label>
        <picklist>
            <picklistValues>
                <fullName>ABI/INFORM Professional Advanced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABI/INFORM Professional Market Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABI/INFORM Professional Premium</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Reporter_Priority__c</fullName>
        <label>Reporter Priority</label>
        <picklist>
            <picklistValues>
                <fullName>0-Blocker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reproducible_in_Production__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reproducible in Production</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reproducible_in_Professional__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reproducible in Professional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <description>Resolution of the JIRA issue</description>
        <inlineHelpText>Resolution of the JIRA issue</inlineHelpText>
        <label>Resolution</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Root_Cause_Analysis_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Root Cause Analysis Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Root_Cause_Analysis__c</fullName>
        <label>Root Cause Analysis</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <description>JIRA defined severity</description>
        <inlineHelpText>JIRA defined severity</inlineHelpText>
        <label>Severity</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sharepoint_Triage__c</fullName>
        <label>Sharepoint Triage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sprint__c</fullName>
        <label>Sprint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StepsToReproduce__c</fullName>
        <label>StepsToReproduce</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TS_Escalated_Issue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TS Escalated Issue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Technical_Severity__c</fullName>
        <label>Technical Severity</label>
        <picklist>
            <picklistValues>
                <fullName>1- Blocker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Testing_Environment__c</fullName>
        <label>Testing Environment</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Dev</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nightly</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>TicketType__c</fullName>
        <label>TicketType</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>comment__c</fullName>
        <label>comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>components__c</fullName>
        <label>components</label>
        <picklist>
            <picklistValues>
                <fullName>add</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>stuff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>here</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>JIRACXIssue</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>JIRACXIssue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>JIRACXIssues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>